# PPOIS

PPOIS/: .gitignore
PPOIS/MatrixPPOIS1/: CMakeLists.txt
PPOIS/MatrixPPOIS1/Matrix/: CMakeLists.txt  Matrix.cpp  Matrix.h
PPOIS/MatrixPPOIS1/Tests/: CMakeLists.txt  test.cpp
PPOIS/PPOIS2/: README.md
PPOIS/PPOIS2/Branch/: Branch.cpp  Branch.h
PPOIS/PPOIS2/Buildings/: Apartment.cpp  Apartment.h  Building.cpp  Building.h  Bytovka.cpp  Bytovka.h  House.cpp  House.h  ShoppingMall.cpp  ShoppingMall.h  SteelConstruction.cpp  SteelConstruction.h
PPOIS/PPOIS2/Clients/: Client.cpp  Client.h
PPOIS/PPOIS2/Company/: Company.cpp  Company.h
PPOIS/PPOIS2/Contracts/: Contract.cpp  Contract.h
PPOIS/PPOIS2/Employees/: Accountant.cpp  Accountant.h  Employee.cpp  Employee.h  Engineer.cpp  Engineer.h  Manager.cpp  Manager.h  Supplier.cpp  Supplier.h  Worker.cpp  Worker.h
PPOIS/PPOIS2/Equipment/: Crane.cpp  Crane.h  Drill.cpp  Drill.h  Equipment.cpp  Equipment.h  MeasuringTool.cpp  MeasuringTool.h  ReflectiveVest.cpp  ReflectiveVest.h  Tool.cpp  Tool.h  Truck.cpp  Truck.h  Vehicle.cpp  Vehicle.h  Workwear.cpp  Workwear.h
PPOIS/PPOIS2/Exceptions/: Exceptions.h
PPOIS/PPOIS2/Materials/: Brick.cpp  Brick.h  Concrete.cpp  Concrete.h  Material.cpp  Material.h  Steel.cpp  Steel.h  Wood.cpp  Wood.h
PPOIS/PPOIS2/Payment/: Payment.cpp  Payment.h
PPOIS/PPOIS2/Places/: Place.cpp  Place.h  Site.cpp  Site.h  Warehouse.cpp  (+1 more)
PPOIS/VectorPPOIS1/: CMakeLists.txt
PPOIS/VectorPPOIS1/Tests/: CMakeLists.txt  test.cpp
PPOIS/VectorPPOIS1/Vector/: CMakeLists.txt  Vector.cpp  Vector.h
(+18 files in other folders)
